Blender crashes after baking indirect lights or cubemap on eevee #65386

Closed
opened 2019-06-01 11:56:49 +02:00 by Alex Faiad · 15 comments

System Information
Operating system: Linux-4.18.0-20-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: AMD Radeon (TM) R9 Fury Series (FIJI, DRM 3.26.0, 4.18.0-20-generic, LLVM 7.0.0) X.Org 4.5 (Core Profile) Mesa 18.2.8

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-05-31 22:45, hash: cc600de669
Worked: (optional)

Short description of error
Blender crashes after baking indirect lights or cubemap on eevee. It works for a little while but as soon as you do something, for instance save the file, it crashes and closes.

Exact steps for others to reproduce the error
1- Open teste2.8f.blend. It contains links to animations and objects from the file 2.7render.blend which was made in 2.79b latest for linux. And also a number of textures. I included them just in case.
2-On Indirect Lighting, click Bake cubemap only (Bake indirect lighting also crashes but I just needed to rebake the cubemaps).
3-Set the viewport to rendered (I think it crashes in any view but it's what I've been trying)
4- Do something else like moving the timeline or trying to save the file. Blender will crash and close.

I also included the crash file it generates.
I tried rebooting the pc just in case but still happens.

bug.zip

teste2.8f.crash.txt

**System Information** Operating system: Linux-4.18.0-20-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: AMD Radeon (TM) R9 Fury Series (FIJI, DRM 3.26.0, 4.18.0-20-generic, LLVM 7.0.0) X.Org 4.5 (Core Profile) Mesa 18.2.8 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-05-31 22:45, hash: `cc600de669` Worked: (optional) **Short description of error** Blender crashes after baking indirect lights or cubemap on eevee. It works for a little while but as soon as you do something, for instance save the file, it crashes and closes. **Exact steps for others to reproduce the error** 1- Open teste2.8f.blend. It contains links to animations and objects from the file 2.7render.blend which was made in 2.79b latest for linux. And also a number of textures. I included them just in case. 2-On Indirect Lighting, click Bake cubemap only (Bake indirect lighting also crashes but I just needed to rebake the cubemaps). 3-Set the viewport to rendered (I think it crashes in any view but it's what I've been trying) 4- Do something else like moving the timeline or trying to save the file. Blender will crash and close. I also included the crash file it generates. I tried rebooting the pc just in case but still happens. [bug.zip](https://archive.blender.org/developer/F7081905/bug.zip) [teste2.8f.crash.txt](https://archive.blender.org/developer/F7081920/teste2.8f.crash.txt)
Author

Added subscriber: @alexfaiad

Added subscriber: @alexfaiad

Added subscriber: @filibis

Added subscriber: @filibis
Author

I just tested on windows 7 with an AMD FX 8350 with a geforce 710 and it worked fine. No crashes

I also tested on a laptop satellite radius L40DW-C with an AMD A8 with integrated radeon R5 running the latest KDE neon, also based on ubuntu 18.04 and it also crashed.

Both linux computers were running the open source driver that comes with the kernel.

I just tested on windows 7 with an AMD FX 8350 with a geforce 710 and it worked fine. No crashes I also tested on a laptop satellite radius L40DW-C with an AMD A8 with integrated radeon R5 running the latest KDE neon, also based on ubuntu 18.04 and it also crashed. Both linux computers were running the open source driver that comes with the kernel.
Author

But then when I open the file I baked from windows on linux it becomes all blown out. Bellow is the blown out one that was baked on windows, viewed on linux (it looks correct on windows) and the previous one on linux, with the wrong, black cubemap reflections that I'm trying to update.

correct.png

windowsBake.png

But then when I open the file I baked from windows on linux it becomes all blown out. Bellow is the blown out one that was baked on windows, viewed on linux (it looks correct on windows) and the previous one on linux, with the wrong, black cubemap reflections that I'm trying to update. ![correct.png](https://archive.blender.org/developer/F7081974/correct.png) ![windowsBake.png](https://archive.blender.org/developer/F7081976/windowsBake.png)

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Campbell Barton was assigned by Sebastian Parborg 2019-06-13 15:42:22 +02:00

It seems like it crashes somewhere in the undo system:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x00007ffff32d799c in ?? () from /lib64/libc.so.6
(gdb) bt
- 0  0x00007ffff32d799c in ?? () from /lib64/libc.so.6
- 1  0x0000555558f00aff in mywrite (wd=0x7fffb36d5838, adr=0x3f800000bf1ec94f, len=408)
    at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:447
#2  0x0000555558f00d21 in writestruct_at_address_nr (wd=0x7fffb36d5838, filecode=1096040772, struct_nr=271, nr=1, adr=0x3f800000bf1ec94f,
    data=0x3f800000bf1ec94f) at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:525
#3  0x0000555558f00e15 in writestruct_nr (wd=0x7fffb36d5838, filecode=1096040772, struct_nr=271, nr=1, adr=0x3f800000bf1ec94f)
    at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:547
#4  0x0000555558f07cae in write_region (wd=0x7fffb36d5838, ar=0x3f800000bf1ec94f, spacetype=0)
    at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:2721
#5  0x0000555558f0810c in write_area_regions (wd=0x7fffb36d5838, area=0x7fffcffc4fc8)
    at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:2814
#6  0x0000555558f0895e in write_area_map (wd=0x7fffb36d5838, area_map=0x7fffd328c320)
    at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:2960
- 7  0x0000555558f08bc1 in write_screen (wd=0x7fffb36d5838, sc=0x7fffd328c288) at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:3008
- 8  0x0000555558f0af13 in write_file_handle (mainvar=0x7fffd3765008, ww=0x0, compare=0x7fffd03d9808, current=0x7fffd2f9cf08, write_flags=33558530, thumb=0x0)
    at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:3816
#9  0x0000555558f0bc44 in BLO_write_file_mem (mainvar=0x7fffd3765008, compare=0x7fffd03d9808, current=0x7fffd2f9cf08, write_flags=33558530)
    at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:4135
#10 0x0000555558f0c32c in BKE_memfile_undo_encode (bmain=0x7fffd3765008, mfu_prev=0x7fffd03d9408)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/blender_undo.c:120
#11 0x0000555558efc565 in memfile_undosys_step_encode (UNUSED_C=0x7fffeb891208, bmain=0x7fffd3765008, us_p=0x7fffb3693a08)
    at /home/zed/prog/blender/source/blender/editors/undo/memfile_undo.c:80
#12 0x0000555558f26e35 in undosys_step_encode (C=0x7fffeb891208, bmain=0x7fffd3765008, ustack=0x7fffca0cf6a8, us=0x7fffb3693a08)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/undo_system.c:156
#13 0x0000555558f285ed in BKE_undosys_step_push_with_type (ustack=0x7fffca0cf6a8, C=0x7fffeb891208, name=0x55555cf66866 "Frame Change", ut=0x7fffe64bba48)
    at /home/zed/prog/blender/source/blender/blenkernel/intern/undo_system.c:555
#14 0x0000555558f287f8 in BKE_undosys_step_push (ustack=0x7fffca0cf6a8, C=0x7fffeb891208, name=0x55555cf66866 "Frame Change")
    at /home/zed/prog/blender/source/blender/blenkernel/intern/undo_system.c:591
#15 0x0000555558efaac2 in ED_undo_push (C=0x7fffeb891208, str=0x55555cf66866 "Frame Change")
    at /home/zed/prog/blender/source/blender/editors/undo/ed_undo.c:95
#16 0x0000555558efb2ce in ED_undo_grouped_push (C=0x7fffeb891208, str=0x55555cf66866 "Frame Change")
    at /home/zed/prog/blender/source/blender/editors/undo/ed_undo.c:267
- 17 0x0000555558efb386 in ED_undo_grouped_push_op (C=0x7fffeb891208, op=0x7fffc23b9948) at /home/zed/prog/blender/source/blender/editors/undo/ed_undo.c:288
- 18 0x0000555558296c73 in wm_operator_finished (C=0x7fffeb891208, op=0x7fffc23b9948, repeat=false, store=true)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:988
#19 0x0000555558299ea8 in wm_handler_operator_call (C=0x7fffeb891208, handlers=0x7fffd3637318, handler_base=0x7fffb2ef3068, event=0x7fffb3693788,
    properties=0x0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2219
--Type <RET> for more, q to quit, c to continue without paging--c
- 20 0x000055555829bdbd in wm_handlers_do_intern (C=0x7fffeb891208, event=0x7fffb3693788, handlers=0x7fffd3637318) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2899
- 21 0x000055555829bf4f in wm_handlers_do (C=0x7fffeb891208, event=0x7fffb3693788, handlers=0x7fffd3637318) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2947
- 22 0x000055555829d123 in wm_event_do_handlers (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3316
- 23 0x000055555829053d in WM_main (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:417
#24 0x0000555557beb369 in main (argc=1, argv=0x7fffffffe078) at /home/zed/prog/blender/source/creator/creator.c:500
It seems like it crashes somewhere in the undo system: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x00007ffff32d799c in ?? () from /lib64/libc.so.6 (gdb) bt - 0 0x00007ffff32d799c in ?? () from /lib64/libc.so.6 - 1 0x0000555558f00aff in mywrite (wd=0x7fffb36d5838, adr=0x3f800000bf1ec94f, len=408) at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:447 #2 0x0000555558f00d21 in writestruct_at_address_nr (wd=0x7fffb36d5838, filecode=1096040772, struct_nr=271, nr=1, adr=0x3f800000bf1ec94f, data=0x3f800000bf1ec94f) at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:525 #3 0x0000555558f00e15 in writestruct_nr (wd=0x7fffb36d5838, filecode=1096040772, struct_nr=271, nr=1, adr=0x3f800000bf1ec94f) at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:547 #4 0x0000555558f07cae in write_region (wd=0x7fffb36d5838, ar=0x3f800000bf1ec94f, spacetype=0) at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:2721 #5 0x0000555558f0810c in write_area_regions (wd=0x7fffb36d5838, area=0x7fffcffc4fc8) at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:2814 #6 0x0000555558f0895e in write_area_map (wd=0x7fffb36d5838, area_map=0x7fffd328c320) at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:2960 - 7 0x0000555558f08bc1 in write_screen (wd=0x7fffb36d5838, sc=0x7fffd328c288) at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:3008 - 8 0x0000555558f0af13 in write_file_handle (mainvar=0x7fffd3765008, ww=0x0, compare=0x7fffd03d9808, current=0x7fffd2f9cf08, write_flags=33558530, thumb=0x0) at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:3816 #9 0x0000555558f0bc44 in BLO_write_file_mem (mainvar=0x7fffd3765008, compare=0x7fffd03d9808, current=0x7fffd2f9cf08, write_flags=33558530) at /home/zed/prog/blender/source/blender/blenloader/intern/writefile.c:4135 #10 0x0000555558f0c32c in BKE_memfile_undo_encode (bmain=0x7fffd3765008, mfu_prev=0x7fffd03d9408) at /home/zed/prog/blender/source/blender/blenkernel/intern/blender_undo.c:120 #11 0x0000555558efc565 in memfile_undosys_step_encode (UNUSED_C=0x7fffeb891208, bmain=0x7fffd3765008, us_p=0x7fffb3693a08) at /home/zed/prog/blender/source/blender/editors/undo/memfile_undo.c:80 #12 0x0000555558f26e35 in undosys_step_encode (C=0x7fffeb891208, bmain=0x7fffd3765008, ustack=0x7fffca0cf6a8, us=0x7fffb3693a08) at /home/zed/prog/blender/source/blender/blenkernel/intern/undo_system.c:156 #13 0x0000555558f285ed in BKE_undosys_step_push_with_type (ustack=0x7fffca0cf6a8, C=0x7fffeb891208, name=0x55555cf66866 "Frame Change", ut=0x7fffe64bba48) at /home/zed/prog/blender/source/blender/blenkernel/intern/undo_system.c:555 #14 0x0000555558f287f8 in BKE_undosys_step_push (ustack=0x7fffca0cf6a8, C=0x7fffeb891208, name=0x55555cf66866 "Frame Change") at /home/zed/prog/blender/source/blender/blenkernel/intern/undo_system.c:591 #15 0x0000555558efaac2 in ED_undo_push (C=0x7fffeb891208, str=0x55555cf66866 "Frame Change") at /home/zed/prog/blender/source/blender/editors/undo/ed_undo.c:95 #16 0x0000555558efb2ce in ED_undo_grouped_push (C=0x7fffeb891208, str=0x55555cf66866 "Frame Change") at /home/zed/prog/blender/source/blender/editors/undo/ed_undo.c:267 - 17 0x0000555558efb386 in ED_undo_grouped_push_op (C=0x7fffeb891208, op=0x7fffc23b9948) at /home/zed/prog/blender/source/blender/editors/undo/ed_undo.c:288 - 18 0x0000555558296c73 in wm_operator_finished (C=0x7fffeb891208, op=0x7fffc23b9948, repeat=false, store=true) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:988 #19 0x0000555558299ea8 in wm_handler_operator_call (C=0x7fffeb891208, handlers=0x7fffd3637318, handler_base=0x7fffb2ef3068, event=0x7fffb3693788, properties=0x0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2219 --Type <RET> for more, q to quit, c to continue without paging--c - 20 0x000055555829bdbd in wm_handlers_do_intern (C=0x7fffeb891208, event=0x7fffb3693788, handlers=0x7fffd3637318) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2899 - 21 0x000055555829bf4f in wm_handlers_do (C=0x7fffeb891208, event=0x7fffb3693788, handlers=0x7fffd3637318) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2947 - 22 0x000055555829d123 in wm_event_do_handlers (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3316 - 23 0x000055555829053d in WM_main (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:417 #24 0x0000555557beb369 in main (argc=1, argv=0x7fffffffe078) at /home/zed/prog/blender/source/creator/creator.c:500 ```
Author

Hi, was something done about this bug? I am on a new project but I can't really use Eevee because of the same bug. I'm attaching the project. The only error message on shell is

blender: ../src/gallium/drivers/radeonsi/si_descriptors.c:1507: si_desc_reset_buffer_offset: Assertion `old_buf_va <= old_desc_va' failed.
Aborted (core dumped)

To test it, unzip both files on the same directory, open 28test.blend (it references the other file) and hit "bake indirect lighting". Here it just crashes.

Assets.zip

By the way, I'm using the latest blender 2.8 rc2 as of 23/july/2019

All the other info (hardware and software) is the same as before on Linux

Hi, was something done about this bug? I am on a new project but I can't really use Eevee because of the same bug. I'm attaching the project. The only error message on shell is blender: ../src/gallium/drivers/radeonsi/si_descriptors.c:1507: si_desc_reset_buffer_offset: Assertion `old_buf_va <= old_desc_va' failed. Aborted (core dumped) To test it, unzip both files on the same directory, open 28test.blend (it references the other file) and hit "bake indirect lighting". Here it just crashes. [Assets.zip](https://archive.blender.org/developer/F7623971/Assets.zip) By the way, I'm using the latest blender 2.8 rc2 as of 23/july/2019 All the other info (hardware and software) is the same as before on Linux

Added subscriber: @capnm

Added subscriber: @capnm

blender: ../src/gallium/drivers/radeonsi/si_descriptors.c:1507: si_desc_reset_buffer_offset: Assertion `old_buf_va <= old_desc_va' failed.

That's another bug, see https://developer.blender.org/T61093#716608

> blender: ../src/gallium/drivers/radeonsi/si_descriptors.c:1507: si_desc_reset_buffer_offset: Assertion `old_buf_va <= old_desc_va' failed. That's another bug, see https://developer.blender.org/T61093#716608
Author

Thank you. I'll try again installing that driver.
I got the radeon because everyone told me it would be easier on Linux but the proprietary Nvidia driver was just so much easier...

Thank you. I'll try again installing that driver. I got the radeon because everyone told me it would be easier on Linux but the proprietary Nvidia driver was just so much easier...

I got the radeon because everyone told me it would be easier on Linux but the proprietary Nvidia driver was just so much easier...

Ah, copying/pasting this in the terminal is no harder than installing the proprietary drivers :-)

sudo add-apt-repository ppa:paulo-miguel-dias/mesa
sudo apt update
sudo apt upgrade
reboot
> I got the radeon because everyone told me it would be easier on Linux but the proprietary Nvidia driver was just so much easier... Ah, copying/pasting this in the terminal is no harder than installing the proprietary drivers :-) ``` sudo add-apt-repository ppa:paulo-miguel-dias/mesa sudo apt update sudo apt upgrade reboot ```
Campbell Barton removed their assignment 2019-07-23 11:49:42 +02:00
Clément Foucault was assigned by Campbell Barton 2019-07-23 11:49:42 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

The baking code isn't checking the array length before writing to lcache->cube_data, naive fix:

diff --git a/source/blender/draw/engines/eevee/eevee_lightcache.c b/source/blender/draw/engines/eevee/eevee_lightcache.c
index 3977fd160fc..5cbf4f5fbdf 100644
--- a/source/blender/draw/engines/eevee/eevee_lightcache.c
+++ b/source/blender/draw/engines/eevee/eevee_lightcache.c
@@ -1103,6 +1103,12 @@ static void eevee_lightbake_gather_probes(EEVEE_LightBake *lbake)
         EEVEE_lightprobes_grid_data_from_object(ob, egrid, &total_irr_samples);
       }
       else if (prb->type == LIGHTPROBE_TYPE_CUBE) {
+        if (cube_len + 1 >= lcache->cube_len) {
+          lcache->cube_len = cube_len + 1;
+          lcache->cube_data = MEM_recallocN(lcache->cube_data,
+                                            sizeof(*lcache->cube_data) * lcache->cube_len);
+        }
+
         lbake->cube_prb[cube_len] = prb;
         EEVEE_LightProbe *eprobe = &lcache->cube_data[cube_len++];
         EEVEE_lightprobes_cube_data_from_object(ob, eprobe);
The baking code isn't checking the array length before writing to `lcache->cube_data`, naive fix: ``` diff --git a/source/blender/draw/engines/eevee/eevee_lightcache.c b/source/blender/draw/engines/eevee/eevee_lightcache.c index 3977fd160fc..5cbf4f5fbdf 100644 --- a/source/blender/draw/engines/eevee/eevee_lightcache.c +++ b/source/blender/draw/engines/eevee/eevee_lightcache.c @@ -1103,6 +1103,12 @@ static void eevee_lightbake_gather_probes(EEVEE_LightBake *lbake) EEVEE_lightprobes_grid_data_from_object(ob, egrid, &total_irr_samples); } else if (prb->type == LIGHTPROBE_TYPE_CUBE) { + if (cube_len + 1 >= lcache->cube_len) { + lcache->cube_len = cube_len + 1; + lcache->cube_data = MEM_recallocN(lcache->cube_data, + sizeof(*lcache->cube_data) * lcache->cube_len); + } + lbake->cube_prb[cube_len] = prb; EEVEE_LightProbe *eprobe = &lcache->cube_data[cube_len++]; EEVEE_lightprobes_cube_data_from_object(ob, eprobe); ```

This issue was referenced by ef0e06d764

This issue was referenced by ef0e06d7644727883c250975133264b046930b70

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65386
No description provided.