Fix T65386 Eevee: Crash after baking indirect lights or cubemap

I'm not sure this fixes the root of the problem. The file from the ticket
seems to have been corrupted in some way.

We MIGHT want this in 2.80.